--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1 {
     font-size: 40px;
     display: inline-block;
     cursor: pointer;
+    -webkit-user-select: none;
 }
 #btn:hover{
     opacity: 0.8;
@@ -42,6 +43,7 @@ h1 {
     font-size: 40px;
     display: inline-block;
     cursor: pointer;
+    -webkit-user-select: none;
 }
 #btn2:hover{
     opacity: 0.8;
